WIP: add e2e testing mode & plugin
