# internal/api/restapi/configure_comentario.go
@@ -4,8 +4,10 @@ package restapi
 
 import (
 	"crypto/tls"
+	"fmt"
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
 	"github.com/justinas/alice"
@@ -13,13 +15,20 @@ import (
 	"gitlab.com/comentario/comentario/internal/api/restapi/handlers"
 	"gitlab.com/comentario/comentario/internal/api/restapi/operations"
 	"gitlab.com/comentario/comentario/internal/config"
+	"gitlab.com/comentario/comentario/internal/e2e"
 	"gitlab.com/comentario/comentario/internal/svc"
 	"gitlab.com/comentario/comentario/internal/util"
 	"net/http"
+	"os"
+	"path"
+	"plugin"
 )
 
 // logger represents a package-wide logger instance
 var logger = logging.MustGetLogger("restapi")
+
+// Global e2e handler instance (only in e2e testing mode)
+var e2eHandler e2e.End2EndHandler
 
 func configureFlags(api *operations.ComentarioAPI) {
 	api.CommandLineOptionsGroups = []swag.CommandLineOptionsGroup{
@@ -51,6 +60,7 @@ func configureAPI(api *operations.ComentarioAPI) http.Handler {
 
 	// Configure swagger UI
 	if config.CLIFlags.EnableSwaggerUI {
+		logger.Warningf("Enabling Swagger UI")
 		api.UseSwaggerUI()
 	}
 
@@ -108,6 +118,13 @@ func configureAPI(api *operations.ComentarioAPI) http.Handler {
 	api.PreServerShutdown = func() {}
 	api.ServerShutdown = svc.TheServiceManager.Shutdown
 
+	// If in e2e-testing mode, configure the backend accordingly
+	if config.CLIFlags.E2e {
+		if err := configureE2eMode(api); err != nil {
+			logger.Fatalf("Failed to configure e2e plugin: %v", err)
+		}
+	}
+
 	// Set up the middleware
 	chain := alice.New(
 		rootHandler,
@@ -134,4 +151,51 @@ func configureServer(_ *http.Server, scheme, _ string) {
 
 	// Initialise the services
 	svc.TheServiceManager.Initialise()
+
+	// Init the e2e handler
+	if err := e2eHandler.Init(&e2eApp{logger: logging.MustGetLogger("e2e")}); err != nil {
+		logger.Fatalf("e2e handler init failed: %v", err)
+	}
+}
+
+// configureE2eMode configures the app to run in the end-2-end testing mode
+func configureE2eMode(api *operations.ComentarioAPI) error {
+	// Get the plugin path
+	p, err := os.Executable()
+	if err != nil {
+		return err
+	}
+	pluginFile := path.Join(path.Dir(p), "comentario-e2e.so")
+
+	// Load the e2e plugin
+	logger.Infof("Loading e2e plugin %s", pluginFile)
+	plug, err := plugin.Open(pluginFile)
+	if err != nil {
+		return err
+	}
+
+	// Look up the handler
+	h, err := plug.Lookup("Handler")
+	if err != nil {
+		return err
+	}
+
+	// Fetch the service interface (hPtr is a pointer, because Lookup always returns a pointer to symbol)
+	hPtr, ok := h.(*e2e.End2EndHandler)
+	if !ok {
+		return fmt.Errorf("symbol Handler from plugin %s doesn't implement End2EndHandler", pluginFile)
+	}
+
+	// Configure API endpoints
+	e2eHandler = *hPtr
+	api.E2eResetHandler = operations.E2eResetHandlerFunc(func(operations.E2eResetParams) middleware.Responder {
+		if err := e2eHandler.HandleReset(); err != nil {
+			logger.Errorf("E2eReset failed: %v", err)
+			return operations.NewGenericInternalServerError()
+		}
+		return operations.NewE2eResetNoContent()
+	})
+
+	// Succeeded
+	return nil
 }
